# Linear_Regression_from_scratch

./: .gitignore  RANSAC.ipynb  README.md  linearregression.ipynb  pyproject.toml
LRenv/: pyvenv.cfg
