[project]
name = "linearregressiontutorial"
version = "0.1.0"
description = ""
authors = [
    {name = "Emmanuel Osabutey",email = "tettehosabutey49@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel (>=6.30.1,<7.0.0)",
    "scikit-learn (>=1.7.1,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.2,<3.0.0)",
    "mlxtend (>=0.23.4,<0.24.0)",
    "matplotlib (>=3.10.6,<4.0.0)"
]

[tool.poetry]
packages = [{include = "linearregressiontutorial", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
